--- a/cluster/apps/database-system/postgres/secret.sops.yaml
+++ b/cluster/apps/database-system/postgres/secret.sops.yaml
@@ -4,6 +4,8 @@ metadata:
     name: postgres-secrets
 stringData:
     postgres-password: ENC[AES256_GCM,data:3MY6tT1ngDVVwtw6EUpI1+77QhXpDW6bF6cbwBZp+2ptYZLuEwE7oeFG9AoCLP74MQ==,iv:4Gjq5Kv+yA8QBYTRXG8iEWmVkuYPajtaRxl/8ZxeRYE=,tag:bLl3WDvtmWfJG/fd3+9lAA==,type:str]
+    password: ENC[AES256_GCM,data:xzJr60lNBvbeEtqnTkuvkELZrkMUwV4fyiQZfFwynwJdUXS1FxfWwubnnAnR0BNwXA==,iv:8h+zjfr8IIkIAB2CiuURxlaqEix15GV8mUamqQuSl3w=,tag:v9RVlBKvQGs4NWdbodasaw==,type:str]
+    replication-password: ENC[AES256_GCM,data:m8qYIn1QVn5Y1/t15ezw6xZhCTGwfrO9mxNKv6SFjaP5StrhWZFkAi3vfhEIksenOA==,iv:tkePHhb5TYkZ+tJ3WDAWA3xso0tpCg2x75uSCIA3csk=,tag:aldIkuhsR5jIS/9fMv4wMQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -19,8 +21,8 @@ sops:
             L0JrZnNNQzVBMk1OVEE3dXA5MzhWaXcKgmRTNFXgJXwwxv0XYhI7V6H7pnZ/VcYr
             +q0L4vEBWVe0JIrnEUAzdC2yqzqODGnmBy/9YHjVw161Q3pm4mEUtA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-05-05T02:47:24Z"
-    mac: ENC[AES256_GCM,data:JTUW/rISxr85utievvJBXbdxbCHOwT/n8p7KJILN6jzWhiOEJVwoZIDfH6NFA1Ovxm/LcogIb/Mpc+IeJv165LDdC48+4uIs5IvianmRrozOjuPfUp6eqSFg4HaxelCnvnLzj1XsXGs1AeC4ApqngAPilhcaJibWuoQxtlk26L0=,iv:S7MaaHDrjGA6KSSjCZYCfjseoxvYeJoy3kjBV+xSJSM=,tag:bY8zfUsQw/jTaVU5o9P4JQ==,type:str]
+    lastmodified: "2022-05-05T03:06:49Z"
+    mac: ENC[AES256_GCM,data:g1ELH2lUDVdOoizS5Yp4nLg87bQl87qTCvxoaZpH5OEWNTlNgtH3VfCUCOiY6ovZ1dImBsWCmcVs7eYR5i6Lr4BPdv05Y45uhCNUoWTGKvMp9bL0Q5cSL31P6J3wNpJHstLriOfY0QwGSenuftI4HN7KKAf7RwAZjkrJRTEeYZA=,iv:sxIdTIkLkzsrRCbEYVAwOSUUsE8vTgaT2tFTTLTXNCI=,tag:gvdG91W7eJTyNJ3QLFnc8A==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.2
