--- a/cluster/apps/database-system/postgres/helm-release.yaml
+++ b/cluster/apps/database-system/postgres/helm-release.yaml
@@ -16,6 +16,7 @@ spec:
         namespace: flux-system
       interval: 5m
   values:
+    fullnameOverride: postgres
     image:
       registry: public.ecr.aws
       repository: bitnami/postgresql
