--- a/cluster/apps/monitoring/grafana/helm-release.yaml
+++ b/cluster/apps/monitoring/grafana/helm-release.yaml
@@ -90,6 +90,18 @@ spec:
           datasource: Prometheus
           gnetId: 13032
           revision: 6
+        postgres-overview:
+          gnetId: 9628
+          revision: 7
+          datasource: Prometheus
+        traefik:
+          gnetId: 11462
+          revision: 1
+          datasource: Prometheus
+        redis:
+          gnetId: 12776
+          revision: 2
+          datasource: Redis
     sidecar:
       datasources:
         enabled: true
@@ -104,16 +116,7 @@ spec:
         deleteDatasources:
           - name: Loki
             orgId: 1
-        datasources:
-          - name: Prometheus
-            type: prometheus
-            access: proxy
-            url: http://prometheus-prometheus.monitoring.svc.cluster.local:9090/
-            isDefault: true
-          - name: Loki
-            type: loki
-            access: proxy
-            url: http://loki.monitoring.svc.cluster.local:3100
+        datasources: []
     grafana.ini:
       server:
         root_url: "https://grafana.${CLUSTER_DOMAIN}"
