--- a/cluster/apps/monitoring/kube-prometheus-stack/datasource.yaml
+++ b/cluster/apps/monitoring/kube-prometheus-stack/datasource.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: loki-datasource
+  name: promethus-datasource
   labels:
     grafana_datasource: "1"
 data:
