add authentik to middleware

--- a/cluster/apps/networking/traefik/addons/middleware/internal-auth.yaml
+++ b/cluster/apps/networking/traefik/addons/middleware/internal-auth.yaml
@@ -7,5 +7,7 @@ metadata:
 spec:
   chain:
     middlewares:
-      - name: rfc1918-ips
+      - name: local-only-access
+      - name: auth-sso
+        namespace: auth-system
       - name: error-pages
