--- a/cluster/apps/networking/traefik/addons/middleware/external-auth.yaml
+++ b/cluster/apps/networking/traefik/addons/middleware/external-auth.yaml
@@ -7,6 +7,6 @@ metadata:
 spec:
   chain:
     middlewares:
-      - name: auth-sso
+      - name: secure
         namespace: auth-system
       - name: error-pages
