--- a/cluster/apps/auth-system/authentik/middleware.yaml
+++ b/cluster/apps/auth-system/authentik/middleware.yaml
@@ -6,4 +6,4 @@ metadata:
 spec:
   chain:
     middlewares:
-      - name: auth-ak-outpost-traefik@kubernetescrd
+      - name: auth-system-ak-outpost-traefik@kubernetescrd
