--- a/cluster/apps/networking/traefik/addons/middleware/external-auth.yaml
+++ b/cluster/apps/networking/traefik/addons/middleware/external-auth.yaml
@@ -7,6 +7,5 @@ metadata:
 spec:
   chain:
     middlewares:
-      - name: secure
-        namespace: auth-system
+      - name: authentik
       - name: error-pages
