--- a/cluster/apps/networking/traefik/addons/middleware/kustomization.yaml
+++ b/cluster/apps/networking/traefik/addons/middleware/kustomization.yaml
@@ -2,8 +2,13 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - authentik-forward-auth.yaml
+  - cloudflare.yaml
   - error-handling.yaml
   - external-auth.yaml
   - internal-auth.yaml
   - internal.yaml
   - local-only-access.yaml
+  - no-auth.yaml
+  - rate-limit.yaml
+  - secure-headers.yaml
