--- a/cluster/apps/networking/traefik/addons/middleware/internal-auth.yaml
+++ b/cluster/apps/networking/traefik/addons/middleware/internal-auth.yaml
@@ -7,5 +7,5 @@ spec:
   chain:
     middlewares:
       - name: local-only-access
-      - name: authentik
+      - name: authentik-forward-auth
       - name: no-auth
