--- a/cluster/apps/networking/traefik/addons/middleware/internal-auth.yaml
+++ b/cluster/apps/networking/traefik/addons/middleware/internal-auth.yaml
@@ -6,6 +6,5 @@ metadata:
 spec:
   chain:
     middlewares:
-      - name: local-only-access
-      - name: authentik-forward-auth
-      - name: no-auth
+      - name: internal
+      # - name: authentik-forward-auth
