--- a/cluster/apps/auth-system/authentik/helm-release.yaml
+++ b/cluster/apps/auth-system/authentik/helm-release.yaml
@@ -23,7 +23,7 @@ spec:
 
     ingress:
       enabled: true
-      ingressClassName: "traefik"
+      ingressClassName: traefik
       annotations:
         cert-manager.io/cluster-issuer: letsencrypt-production
         external-dns.alpha.kubernetes.io/target: ipv4.${CLUSTER_DOMAIN}
