--- a/cluster/apps/networking/traefik/addons/middleware/external-auth.yaml
+++ b/cluster/apps/networking/traefik/addons/middleware/external-auth.yaml
@@ -6,5 +6,6 @@ metadata:
 spec:
   chain:
     middlewares:
-      - name: authentik-forward-auth
+      - name: ak-outpost-authentik
+        namespace: auth-system
       - name: no-auth
