--- a/cluster/apps/networking/traefik/addons/middleware/internal-auth.yaml
+++ b/cluster/apps/networking/traefik/addons/middleware/internal-auth.yaml
@@ -7,4 +7,5 @@ spec:
   chain:
     middlewares:
       - name: internal
-      - name: authentik-forward-auth
+      - name: ak-outpost-authentik
+        namespace: auth-system
