fix middleare names to match whatever authentik makes automatically somehow

--- a/cluster/apps/networking/traefik/addons/middleware/external-auth.yaml
+++ b/cluster/apps/networking/traefik/addons/middleware/external-auth.yaml
@@ -6,6 +6,6 @@ metadata:
 spec:
   chain:
     middlewares:
-      - name: ak-outpost-authentik
+      - name: security-auth
         namespace: auth-system
       - name: no-auth
