--- a/cluster/apps/networking/traefik/addons/middleware/internal-auth.yaml
+++ b/cluster/apps/networking/traefik/addons/middleware/internal-auth.yaml
@@ -7,5 +7,5 @@ spec:
   chain:
     middlewares:
       - name: internal
-      - name: ak-outpost-authentik
+      - name: security-auth
         namespace: auth-system
