--- a/cluster/apps/home/homer/helm-release.yaml
+++ b/cluster/apps/home/homer/helm-release.yaml
@@ -43,6 +43,7 @@ spec:
           cert-manager.io/cluster-issuer: letsencrypt-production
           kubernetes.io/ingress.class: traefik
           traefik.ingress.kubernetes.io/router.entrypoints: websecure
+          traefik.ingress.kubernetes.io/router.middlewares: networking-internal@kubernetescrd
         hosts:
           - host: &host "home.${CLUSTER_DOMAIN}"
             paths:
