--- a/cluster/apps/media/overseerr/helm-release.yaml
+++ b/cluster/apps/media/overseerr/helm-release.yaml
@@ -35,7 +35,7 @@ spec:
           external-dns/is-public: "true"
           kubernetes.io/ingress.class: traefik
           traefik.ingress.kubernetes.io/router.entrypoints: websecure
-          traefik.ingress.kubernetes.io/router.middlewares: overseerr-theme@file
+          traefik.ingress.kubernetes.io/router.middlewares: networking-no-auth@kubernetescrd,overseerr-theme@file
         hosts:
           - host: &host "{{ .Release.Name }}.${CLUSTER_DOMAIN}"
             paths:
