--- a/cluster/apps/auth-system/authentik/helm-release.yaml
+++ b/cluster/apps/auth-system/authentik/helm-release.yaml
@@ -32,6 +32,7 @@ spec:
         external-dns/is-public: "true"
         kubernetes.io/ingress.class: traefik
         traefik.ingress.kubernetes.io/router.entrypoints: websecure
+        traefik.ingress.kubernetes.io/router.middlewares: networking-no-auth@kubernetescrd
       hosts:
         - host: &host outpost.${CLUSTER_DOMAIN}
           paths:
