--- a/cluster/apps/auth-system/authentik/middleware.yaml
+++ b/cluster/apps/auth-system/authentik/middleware.yaml
@@ -2,7 +2,7 @@
 apiVersion: traefik.containo.us/v1alpha1
 kind: Middleware
 metadata:
-  name: security-auth
+  name: security
 spec:
   chain:
     middlewares:
