add separate kobo endpoint

--- a/cluster/apps/media/calibre-web/helm-release.yaml
+++ b/cluster/apps/media/calibre-web/helm-release.yaml
@@ -37,7 +37,7 @@ spec:
           external-dns.alpha.kubernetes.io/target: ipv4.${CLUSTER_DOMAIN}
           external-dns/is-public: "true"
           traefik.ingress.kubernetes.io/router.entrypoints: websecure
-          traefik.ingress.kubernetes.io/router.middlewares: networking-no-auth@kubernetescrd
+          traefik.ingress.kubernetes.io/router.middlewares: networking-external-auth@kubernetescrd
         hosts:
           - host: &host "{{ .Release.Name }}.${CLUSTER_DOMAIN}"
             paths:
@@ -47,6 +47,27 @@ spec:
           - secretName: "{{ .Release.Name }}-tls"
             hosts:
               - *host
+
+      # Skip auth on kobo endpoint
+      kobo:
+        enabled: true
+        annotations:
+          cert-manager.io/cluster-issuer: letsencrypt-production
+          kubernetes.io/ingress.class: traefik
+          traefik.ingress.kubernetes.io/router.entrypoints: websecure
+          traefik.ingress.kubernetes.io/router.middlewares: networking-no-auth@kubernetescrd
+
+        hosts:
+          - host: *host
+            paths:
+              - path: /kobo/
+                pathType: Prefix
+
+        tls:
+          - secretName: "{{ .Release.Name }}-tls"
+            hosts:
+              - *host
+
     persistence:
       config:
         enabled: true
