--- a/cluster/apps/media/trash-updater/kustomization.yaml
+++ b/cluster/apps/media/trash-updater/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - secret.sops.yaml
-  - cronjob.yaml
+  - cron-job.yaml
 configMapGenerator:
   - name: trash-updater-config
     files:
