--- a/cluster/apps/home/paperless/helm-release.yaml
+++ b/cluster/apps/home/paperless/helm-release.yaml
@@ -58,7 +58,7 @@ spec:
       PAPERLESS_URL: https://{{ .Release.Name }}.${CLUSTER_DOMAIN}
       PAPERLESS_REDIS: redis://redis-headless.database-system:6379
       PAPERLESS_DBHOST: ${NAS_ADDR}
-      PAPERLESS_ENABLE_HTTP_REMOTE_USER: true
+      PAPERLESS_ENABLE_HTTP_REMOTE_USER: "true"
       PAPERLESS_HTTP_REMOTE_USER_HEADER_NAME: HTTP_X_AUTHENTIK_USERNAME
 
     persistence:
