add paperless network policy

--- a/cluster/apps/home/paperless/kustomization.yaml
+++ b/cluster/apps/home/paperless/kustomization.yaml
@@ -4,5 +4,6 @@ kind: Kustomization
 resources:
   - helm-release.yaml
   - secret.sops.yaml
+  - network-policy.yaml
   - persistent-volume.yaml
   - persistent-volume-claim.yaml
