add paperless network policy

--- a/cluster/apps/home/paperless/network-policy.yaml
+++ b/cluster/apps/home/paperless/network-policy.yaml
@@ -10,7 +10,8 @@ spec:
   policyTypes:
     - Ingress
   ingress:
-    - from:
+    - action: Allow
+      from:
         - namespaceSelector:
             matchLabels:
               ns: networking
