--- a/cluster/apps/home/paperless/network-policy.yaml
+++ b/cluster/apps/home/paperless/network-policy.yaml
@@ -10,25 +10,33 @@ spec:
   policyTypes:
     - Ingress
   ingress:
-    - action: Allow
-      from:
+    - from:
         - namespaceSelector:
             matchLabels:
               ns: networking
         - podSelector:
             matchLabels:
               app.kubernetes.io/name: traefik
+    - from:
+        - podSelector:
+            matchLabels:
+              app.kubernetes.io/name: paperless-gotenburg
+    - from:
+        - podSelector:
+            matchLabels:
+              app.kubernetes.io/name: paperless-tika
+
 
 ---
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
-  name: allow-paperless-egress
+  name: allow-all-egress
 spec:
-  policyTypes:
-    - Egress
   podSelector:
     matchLabels:
       app.kubernetes.io/name: paperless
+  policyTypes:
+    - Egress
   egress:
-    - action: Allow
+    - {}
