--- a/cluster/apps/home/paperless/network-policy.yaml
+++ b/cluster/apps/home/paperless/network-policy.yaml
@@ -22,7 +22,7 @@ spec:
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
-  name: allow-all-egress
+  name: allow-paperless-egress
 spec:
   podSelector:
     matchLabels:
