fix np, add calibre np

--- a/cluster/apps/home/paperless/network-policy.yaml
+++ b/cluster/apps/home/paperless/network-policy.yaml
@@ -13,7 +13,7 @@ spec:
     - from:
         - namespaceSelector:
             matchLabels:
-              ns: networking
+              kubernetes.io/metadata.name: networking
         - podSelector:
             matchLabels:
               app.kubernetes.io/name: traefik
