fix: add validations for node IPs and load balancer IPs
Signed-off-by: Devin Buhl <devin@buhl.casa>

--- a/.config.sample.env
+++ b/.config.sample.env
@@ -36,10 +36,12 @@ export BOOTSTRAP_AGE_PUBLIC_KEY=""
 #
 
 # The network interface on the host kube-vip should attach to
+# Look this up on your nodes to verify what NIC to use
 # e.g. eno1
 export BOOTSTRAP_ANSIBLE_KUBE_VIP_INTERFACE=""
-# IP Address to use with KubeVIP
+# The IP Address to use with KubeVIP
 # Pick a unused IP that is on the same network as your nodes
+# and also outside the ${BOOTSTRAP_METALLB_TRAEFIK_ADDR} range
 # e.g. 192.168.1.254
 export BOOTSTRAP_ANSIBLE_KUBE_VIP_ADDRESS=""
 
