--- a/.config.sample.env
+++ b/.config.sample.env
@@ -25,6 +25,7 @@ export BOOTSTRAP_METALLB_LB_RANGE=""
 # e.g. 192.168.1.220
 export BOOTSTRAP_METALLB_K8S_GATEWAY_ADDR=""
 # The load balancer IP for traefik, choose from one of the available IPs above
+# that doesn't conflict with any other IP addresses here
 # e.g. 192.168.1.221
 export BOOTSTRAP_METALLB_TRAEFIK_ADDR=""
 # Age Public Key - string should start with age
@@ -41,7 +42,8 @@ export BOOTSTRAP_AGE_PUBLIC_KEY=""
 export BOOTSTRAP_ANSIBLE_KUBE_VIP_INTERFACE=""
 # The IP Address to use with KubeVIP
 # Pick a unused IP that is on the same network as your nodes
-# and also outside the ${BOOTSTRAP_METALLB_TRAEFIK_ADDR} range
+# and outside the ${BOOTSTRAP_METALLB_LB_RANGE} range
+# and doesn't conflict with any other IP addresses here
 # e.g. 192.168.1.254
 export BOOTSTRAP_ANSIBLE_KUBE_VIP_ADDR=""
 
@@ -59,6 +61,7 @@ export BOOTSTRAP_ANSIBLE_DEFAULT_NODE_HOSTNAME_PREFIX="k8s-"
 #
 
 # Host IP Address to the control plane node
+# That doesn't conflict with any other IP addresses here
 # e.g. 192.168.1.200
 export BOOTSTRAP_ANSIBLE_HOST_ADDR_0=""
 # User Ansible will log into the nodes
