chore: update some var names and comments in config
Signed-off-by: Devin Buhl <devin@buhl.casa>

--- a/.config.sample.env
+++ b/.config.sample.env
@@ -6,9 +6,9 @@
 # e.g. https://github.com/k8s-at-home/home-cluster
 export BOOTSTRAP_GIT_REPOSITORY=""
 
-# To enable Flux to update your cluster on `git push` set the following to one of:
-# `ignored` - this feature will be disabled
-# `generated` - this will generate a token and print it in the logs
+# Optional: Enable GitHub to send a webhook to update Flux, set the following to one of:
+# ignored - this feature will be disabled
+# generated - this will generate a token and print it in the logs
 # Set this to any other string and it will be used for the secret
 export BOOTSTRAP_FLUX_GITHUB_WEBHOOK_SECRET="ignored"
 
@@ -76,7 +76,7 @@ export BOOTSTRAP_ANSIBLE_SSH_USERNAME_0=""
 export BOOTSTRAP_ANSIBLE_SUDO_PASSWORD_0=""
 # Set this node as a control node (true/false)
 export BOOTSTRAP_ANSIBLE_CONTROL_NODE_0=""
-# Optionally set the hostname of the node, if set this will override the *_HOSTNAME_PREFIX vars above
+# Optional: Set the hostname of the node, if set this will override the *_HOSTNAME_PREFIX vars above
 export BOOTSTRAP_ANSIBLE_HOSTNAME_0=""
 
 # export BOOTSTRAP_ANSIBLE_HOST_ADDR_1=""
