--- a/cluster/core/kasten-io/k10/config/policies/kustomization.yaml
+++ b/cluster/core/kasten-io/k10/config/policies/kustomization.yaml
@@ -3,3 +3,4 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - k10-disaster-recovery-policy.yaml
+  - pvc-backup-policy.yaml
