be explicit in namespaces

--- a/cluster/apps/auth-system/vaultwarden/secret.sops.yaml
+++ b/cluster/apps/auth-system/vaultwarden/secret.sops.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: Secret
 metadata:
     name: vaultwarden-helm-secrets
+    namespace: auth-system
 stringData:
     values.yaml: ENC[AES256_GCM,data:eJGklHGCEfQYlnDDo3AfuspiGZ47dRYWH/VGyRX8oij5O4rHA99uL2aNM13JNv8tWGTszl1YLMTitrgahzqDhVTS4m688afjK+J3hZ5AhThG7rOVYTKY1CsfYkxo0egP6dMS0JQgB+zXjCpZGvJaO7aKBg==,iv:W7eJtCkHQrZEz2P0NNrdmirx28J2o8Ed01ovBPA1RAg=,tag:uoco5VELngQ/PTHaqiOLEg==,type:str]
 sops:
@@ -20,8 +21,8 @@ sops:
             ZnZ1YlBKYmdpZUxRNGdHSy9vT2ZDYjAKu+jWpELTwWggOIkMTfoJFvNTVHkOSBP8
             Ic2fe4lj8ylgfath+Vuk84EPEMYjZMxC6lsWKJqjuO55AM+vw3RVUQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-05-04T15:41:23Z"
-    mac: ENC[AES256_GCM,data:tQkS8AOXJfFecP/cnX2lZ5VBzdXH7E2cP/LeiwQ2HAhIw7No2eLPE/5NR/8JferLHbRvAPkSX/Ld4kgTiJEDWllaiHxiUOQiNrQhTQu4zEiH/6ymXDsyBLslnVJlUF6eekrDg5a72mS4U8HCNBoLEatBjl/EP+WJFBGjw35Dd/0=,iv:A7i4RqYwCol1HxQAwaR0Gs20gBxfh2dfUDjMoANs8xY=,tag:4kAATyIcrm91gVKPK2+4+Q==,type:str]
+    lastmodified: "2022-05-09T00:20:55Z"
+    mac: ENC[AES256_GCM,data:DblSLep9jF6sUx3mnguU7RMnuKnx/5KcQg34CqUcsQvuNlyvjecDUaFc9qpGztAP2oVCvFIn/DbNJdUp+8M2Hw4pAZpOE0bdZ/Bvdn4NbOBY3mgBMEwIoa4Ceyx35ZhtuBlksG9TnMvkJx5APcbozhN6xQn0iZt9s5uTLfO1O8w=,iv:/XhpC3lufi3QfSuht5eO5JuhyqbdUr8GoMUSjaSx7mA=,tag:fs4JEvyE0TlrX2y/sysclw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.2
