--- a/cluster/apps/auth-system/vaultwarden/helm-release.yaml
+++ b/cluster/apps/auth-system/vaultwarden/helm-release.yaml
@@ -3,6 +3,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: vaultwarden
+  namespace: auth-system
 spec:
   releaseName: vaultwarden
   interval: 5m
