--- a/cluster/apps/auth-system/vaultwarden/persistent-volume.yaml
+++ b/cluster/apps/auth-system/vaultwarden/persistent-volume.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: code-vaultwarden-pv
+  namespace: auth-system
 spec:
   capacity:
     storage: 10Gi
