--- a/cluster/core/kasten-io/k10/config/policies/pvc-backup-policy.yaml
+++ b/cluster/core/kasten-io/k10/config/policies/pvc-backup-policy.yaml
@@ -1,7 +1,7 @@
 apiVersion: config.kio.kasten.io/v1alpha1
 kind: Policy
 metadata:
-  name: media-backup
+  name: pvc-backup-policy
   namespace: kasten-io
 spec:
   comment: ""
