--- a/cluster/apps/database-system/postgres/prometheus-rule.yaml
+++ b/cluster/apps/database-system/postgres/prometheus-rule.yaml
@@ -5,6 +5,7 @@ metadata:
   annotations:
     prometheus-operator-validated: 'true'
   name: postgres
+  namespace: database-system
 spec:
   groups:
     - name: postgres
