--- a/cluster/apps/database-system/postgres/secret.sops.yaml
+++ b/cluster/apps/database-system/postgres/secret.sops.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
     name: postgres-secrets
+    namespace: database-system
 stringData:
     postgres-password: ENC[AES256_GCM,data:3MY6tT1ngDVVwtw6EUpI1+77QhXpDW6bF6cbwBZp+2ptYZLuEwE7oeFG9AoCLP74MQ==,iv:4Gjq5Kv+yA8QBYTRXG8iEWmVkuYPajtaRxl/8ZxeRYE=,tag:bLl3WDvtmWfJG/fd3+9lAA==,type:str]
     password: ENC[AES256_GCM,data:xzJr60lNBvbeEtqnTkuvkELZrkMUwV4fyiQZfFwynwJdUXS1FxfWwubnnAnR0BNwXA==,iv:8h+zjfr8IIkIAB2CiuURxlaqEix15GV8mUamqQuSl3w=,tag:v9RVlBKvQGs4NWdbodasaw==,type:str]
@@ -21,8 +22,8 @@ sops:
             L0JrZnNNQzVBMk1OVEE3dXA5MzhWaXcKgmRTNFXgJXwwxv0XYhI7V6H7pnZ/VcYr
             +q0L4vEBWVe0JIrnEUAzdC2yqzqODGnmBy/9YHjVw161Q3pm4mEUtA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-05-05T03:06:49Z"
-    mac: ENC[AES256_GCM,data:g1ELH2lUDVdOoizS5Yp4nLg87bQl87qTCvxoaZpH5OEWNTlNgtH3VfCUCOiY6ovZ1dImBsWCmcVs7eYR5i6Lr4BPdv05Y45uhCNUoWTGKvMp9bL0Q5cSL31P6J3wNpJHstLriOfY0QwGSenuftI4HN7KKAf7RwAZjkrJRTEeYZA=,iv:sxIdTIkLkzsrRCbEYVAwOSUUsE8vTgaT2tFTTLTXNCI=,tag:gvdG91W7eJTyNJ3QLFnc8A==,type:str]
+    lastmodified: "2022-05-09T00:23:51Z"
+    mac: ENC[AES256_GCM,data:VOWsU5eR0lfZ7+1K+ZfCXcCFOPjFCK+X5wktTNGKy1p2qSEtKgdiyaGY+kGNEjRpdRrdem80IK5fL4RNJS6u4MchjdXgUZpNiJ6igFiFOEhRSphQ1TRJJkDecWuePhlRiOmv3e+B8YSCPmIRloxzOqq2eEhHUCpp7xrDw3aNrMQ=,iv:ky6wb0BmizAJxuAiKW2fqt0h1yLn3zMGqsFd8+2ZYVg=,tag:OHyYrrSv+VjIh9l3WIsyvw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.2
