--- a/cluster/apps/database-system/postgres/persistent-volume-claim.yaml
+++ b/cluster/apps/database-system/postgres/persistent-volume-claim.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: postgres-pvc
+  namespace: database-system
   labels:
     kasten.io/backup-volume: enabled
 spec:
