--- a/cluster/apps/database-system/redis/helm-release.yaml
+++ b/cluster/apps/database-system/redis/helm-release.yaml
@@ -3,6 +3,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: redis
+  namespace: database-system
 spec:
   interval: 5m
   timeout: 15m
