--- a/cluster/apps/flux-system/notifications/alert-manager/notification.yaml
+++ b/cluster/apps/flux-system/notifications/alert-manager/notification.yaml
@@ -3,6 +3,7 @@ apiVersion: notification.toolkit.fluxcd.io/v1beta1
 kind: Provider
 metadata:
   name: alert-manager
+  namespace: flux-system
 spec:
   type: alertmanager
   address: http://alertmanager-operated.monitoring:9093/api/v2/alerts/
@@ -11,6 +12,7 @@ apiVersion: notification.toolkit.fluxcd.io/v1beta1
 kind: Alert
 metadata:
   name: alert-manager
+  namespace: flux-system
 spec:
   providerRef:
     name: alert-manager
