--- a/cluster/apps/flux-system/notifications/github/secret.sops.yaml
+++ b/cluster/apps/flux-system/notifications/github/secret.sops.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: Secret
 metadata:
     name: github-token
+    namespace: flux-system
 stringData:
     token: ENC[AES256_GCM,data:i9HHQt15b6gy5/V+kd2LlZRWjnUynYPW9vqg5y3j45K+ZDRC1et4Hg==,iv:U17UeaXBmNTqKeZWrqF/lMBNOd0Rz+M7oJeVYvwvTCU=,tag:YR2ctmu6fdNdmIa+3ik3mQ==,type:str]
 sops:
@@ -20,8 +21,8 @@ sops:
             Z2N4T1hsUVR1cSsrUXVQU3E4TTZkb3cK/lDqCM+0q46+oScqwS7Vo3xzCiA341OS
             F/Z2ikDjtEgp+k27BNuWJI1dTRTKslRNKKGrTkrOrEkJVGJwLknPWA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-05-01T23:13:55Z"
-    mac: ENC[AES256_GCM,data:QY/vkXPDklNTxP2mdl+8mRKF0rzI4CfExzMw+SAjGaDzEjY1ZEd4xW77rX/Er/ES4Eaz5Xjge3A30MXf+HM04Y3c0/Qo9irIgPJfgmas2nMqF1W2HE++rCvVvSVaLELfeW+/RMbMjVJIIl6lg0pT/JGPeftJRrKqFucw2q28LHQ=,iv:x3dBIzCm1wOGdbaRQGmORl+/fGBJxN3P3G8ZNcvokNY=,tag:2muwUEur85eJjZ0P4QNuPQ==,type:str]
+    lastmodified: "2022-05-09T00:25:13Z"
+    mac: ENC[AES256_GCM,data:ypE+bkD/nNnwt7M0vxuyMC2Te4Z7Hj2fyIStd4N7AT1/6PbqcoVbIryPn/7kNAQyP7kQPSEV76OlHKywPY/o+1Mokvz2M8OhqDY3N/zEcThUcqe8rbWOZAEWWdYWZSRa5qYJWCq7beLV0xJrXTYN8Wth+mQiqERtZIeNlOEKNfI=,iv:FdOfIl3GjLKzM/EjQhX6UNwTlJL4jrckwNnzIKmTJEA=,tag:9hhgPdX2aPo0jnfDkPkMtA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.2
