--- a/cluster/apps/flux-system/webhook/github/secret.sops.yaml
+++ b/cluster/apps/flux-system/webhook/github/secret.sops.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: Secret
 metadata:
     name: github-webhook-token
+    namespace: flux-system
 stringData:
     token: ENC[AES256_GCM,data:qU+tXAhhcCrUOxWBe/EqdPN7GKeXU4fAo6Mz0ao5QjesD7upjeU13AcIGyVPJsRFsz+JBwnM1a+K/noMoyIDlmp+NP6pBIHChTT6Y+QkmGnqdZ7tVZurGFosQv6GD45r2Y+v2A==,iv:kt0FM6G2RzvfePpK3iM4Dx9YfGKcQQqEh8AiNa8FacA=,tag:2FpIYJfUfXeSA8CIsvb+mg==,type:str]
 sops:
@@ -20,8 +21,8 @@ sops:
             U1orOVR4cXRJMHZid1dTdlh4SWNXQ2sKYHQCg0mnq37tRvSTVT1xzSd6g/5NBOAw
             HisEZ92owBAUUQ0JuC/NkYew6XBLLw0AR4GdWvPKtwrXTWtRppDgZw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-05-01T22:33:08Z"
-    mac: ENC[AES256_GCM,data:9umCH5DHVvyT/1PP5DAoKk7xuvh19za750ClS/6BEkaae8LHM38ibVefNWyYpkHs7mtFr7m3IIGfpvqgURbYBgaj22t/YOtDVF+KJQuRN4tUAyti+6HRyQIvgZWAoMu+0hGnhM90luUfZ3SQz2Oc/wDkyny/qYdczSj+ZFqNCNU=,iv:q3r6LkmTulr+PvP7XDr+E7SRtf7UVR7EWQ6azept3yA=,tag:dcd8kr1Qi3Vl5BEEtqN4Kw==,type:str]
+    lastmodified: "2022-05-09T00:25:38Z"
+    mac: ENC[AES256_GCM,data:9jeZsAwH1Plvw/9UEY5hDRWw9hkT/qEOMvLcYz2mVVTBrkDL0+QI6o7rq87v8vYWMZMgrDdX0rMa5ID51aYiGzlN4Lhf980/hRuDXEa1eiKCtfkwV+XBH67PLgFLsi9sD3OYzA3MSRoQTjxNmNAASMi0RJ/0YaYcAkCwMLVNVOs=,iv:sq5Ve1wS4jk++goTgs7r92MNPY5VzVg4mkDYlVwkb1Y=,tag:cNDzHL2oWcfRi5a8mbdL7w==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.2
