--- a/cluster/apps/flux-system/webhook/github/ingress.yaml
+++ b/cluster/apps/flux-system/webhook/github/ingress.yaml
@@ -3,6 +3,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: webhook-receiver
+  namespace: flux-system
   annotations:
     cert-manager.io/cluster-issuer: letsencrypt-production
     external-dns.alpha.kubernetes.io/target: ipv4.${CLUSTER_DOMAIN}
