--- a/cluster/apps/flux-system/webhook/github/receiver.yaml
+++ b/cluster/apps/flux-system/webhook/github/receiver.yaml
@@ -3,6 +3,7 @@ apiVersion: notification.toolkit.fluxcd.io/v1beta1
 kind: Receiver
 metadata:
   name: home-ops
+  namespace: flux-system
 spec:
   type: github
   events:
