fix: set replicaCount to 2 for echo-server
Signed-off-by: Devin Buhl <devin@buhl.casa>

--- a/cluster/apps/default/echo-server/helm-release.yaml
+++ b/cluster/apps/default/echo-server/helm-release.yaml
@@ -23,6 +23,7 @@ spec:
     remediation:
       retries: 3
   values:
+    replicaCount: 2
     ingress:
       enabled: true
       ingressClassName: "traefik"
