--- a/cluster/apps/media/trash-updater/kustomization.yaml
+++ b/cluster/apps/media/trash-updater/kustomization.yaml
@@ -1,5 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: media
 resources:
   - secret.sops.yaml
   - cron-job.yaml
