add ns for configmaps

--- a/cluster/apps/home/home-assistant/secret.sops.yaml
+++ b/cluster/apps/home/home-assistant/secret.sops.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: Secret
 metadata:
     name: home-assistant-secrets
+    namespace: home
 stringData:
     token: ENC[AES256_GCM,data:bYB521Mu8rmsWceQ2efiFWjuPKt3lEJ29KqBwytGXb+wBze+sLUt+r5ySae0Xd2KB3MxNW0ysTVyx41K/E7HDhwqVFu5saDgzEVRtBGTnN0s7jBkjKrdTV3ASvHxu59QofVxTyN3zPhozt/oYPWZw1bH6RcY1HcuuXXDMa1X5UjYRI2ij+tmFwVS+FPSVGqmr78b7hVOe66BASJXC28GJ/k1ZxsxG5JkFgD/yeFgoCi7vtPgE5HR,iv:/HkUlTYruWT6ztMrjjk3xzOQuKiBjLeykVy+GdXbDcY=,tag:WznMBVLH/jKQQYssjzK71Q==,type:str]
 sops:
@@ -20,8 +21,8 @@ sops:
             M2ZYcmZvSGErc3NWbGhIVWtYT211K2sKqofT+7oGNSso8gHwMHHs4c3i7gLCEZ6d
             JBjfrslnFzpKksrM5hxmss8bXgsP81+sGVOdcu3lJ/jwg0HH+MRPtw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-04-27T06:24:03Z"
-    mac: ENC[AES256_GCM,data:YrNNeuRy9pzvvULnvxR6YPFr+yHRF46ycAuH2tqA4C9ueGuPkoRnBnPZPi4pN8FCq7GzEAayzOYYbvuhctJYl2P7IYxjXH0XIW3pnubhXsD2gqgDb829VPjr6jmUnPEGoxdu4HDUuijuQMHp/H9y/RySVttHtIi2IFhz8frwFZw=,iv:wyvCPXtAFw02qGBpqCbT9E9+Nn0F/0hYZUySzdhSQoE=,tag:hRtPrKc5kMwLUEbHxhUfOw==,type:str]
+    lastmodified: "2022-05-09T00:47:21Z"
+    mac: ENC[AES256_GCM,data:hyaEHYgkAqGz1D1mvf2YdBAOwtH9+bjjPkbSro8Ebuj+dUh7TH6owRgjdVdBt/3dKsUJOHZYXG6Le/YQbwqjJiTn3RPygp05neloLmJUFEcTc0m4qT6D6FI0X7ZYjIz4EL52OMN4gRY/5U4fCrC261L46+8OA32gUIJE1NKlr14=,iv:wdl3pvECRxNIvSt0+HLWkbY1m4x3qxTEKhQbVIpJb38=,tag:jp3FQZvNQSaOhuwDKpbp3A==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.2
