--- a/cluster/apps/home/paperless/persistent-volume-claim.yaml
+++ b/cluster/apps/home/paperless/persistent-volume-claim.yaml
@@ -17,6 +17,7 @@ kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
   name: paperless-media-pv-claim
+  namespace: home
 spec:
   accessModes:
     - ReadWriteMany
