--- a/cluster/apps/networking/traefik/addons/middleware/cloudflare.yaml
+++ b/cluster/apps/networking/traefik/addons/middleware/cloudflare.yaml
@@ -34,6 +34,7 @@ apiVersion: traefik.containo.us/v1alpha1
 kind: Middleware
 metadata:
   name: cloudflare
+  namespace: networking
 spec:
   chain:
     middlewares:
