--- a/cluster/core/longhorn-system/volume-snapshot-class.yaml
+++ b/cluster/core/longhorn-system/volume-snapshot-class.yaml
@@ -4,6 +4,6 @@ apiVersion: snapshot.storage.k8s.io/v1
 metadata:
   name: longhorn
   annotations:
-    k10.kasten.io/is-snapshot-class: true
+    k10.kasten.io/is-snapshot-class: "true"
 driver: driver.longhorn.io
 deletionPolicy: Delete
