add snapshot controller

--- a/cluster/core/longhorn-system/kustomization.yaml
+++ b/cluster/core/longhorn-system/kustomization.yaml
@@ -5,4 +5,5 @@ resources:
   - helm-release.yaml
   - prometheus-rules.yaml
   - service-monitor.yaml
+  - snapshot-controller
   - volume-snapshot-class.yaml
