--- a/cluster/apps/media/calibre-web/helm-release.yaml
+++ b/cluster/apps/media/calibre-web/helm-release.yaml
@@ -73,6 +73,8 @@ spec:
       config:
         enabled: true
         storageClass: longhorn
+        labels:
+          kasten.io/backup-volume: enabled
       media:
         enabled: true
         mountPath: /media
