--- a/cluster/apps/monitoring/botkube/helm-release.yaml
+++ b/cluster/apps/monitoring/botkube/helm-release.yaml
@@ -102,6 +102,8 @@ spec:
           namespaces:
             include:
               - all
+            ignore:
+              - kasten-io
           events:
             - create
             - delete
@@ -110,6 +112,8 @@ spec:
           namespaces:
             include:
               - all
+            ignore:
+              - kasten-io
           events:
             - create
             - delete
