--- a/cluster/apps/home/zwavejs2mqtt/helm-release.yaml
+++ b/cluster/apps/home/zwavejs2mqtt/helm-release.yaml
@@ -50,7 +50,9 @@ spec:
     persistence:
       config:
         enabled: true
-        existingClaim: code-zwavejs2mqtt-pv-claim
+        type: nfs
+        server: ${NAS_ADDR}
+        path: /volume1/shared/code/zwavejs2mqtt
       usb:
         enabled: true
         type: hostPath
