--- a/cluster/apps/kube-system/node-feature-discovery/helm-release.yaml
+++ b/cluster/apps/kube-system/node-feature-discovery/helm-release.yaml
@@ -43,23 +43,23 @@ spec:
               - "vendor"
               - "device"
           custom:
-            - name: "zwave"
-              matchOn:
-                - usbId:
-                    class: ["02"]
-                    vendor: ["0658"]
-                    device: ["0200"]
             - name: "intel-gpu"
               matchOn:
                 - pciId:
                     class: ["0300"]
                     vendor: ["8086"]
+            - name: "zwave"
+              matchOn:
+                - usbId:
+                    class: ["ff"]
+                    vendor: ["10c4"]
+                    device: ["8a2a"]
             - name: "zigbee"
               matchOn:
                 - usbId:
                     class: ["ff"]
-                    vendor: ["1a86"]
-                    device: ["7523"]
+                    vendor: ["10c4"]
+                    device: ["8a2a"]
       annotations:
         configmap.reloader.stakater.com/reload: "nfd-worker-conf"
       tolerations:
