fix labels added by nfd

--- a/cluster/apps/home/zigbee2mqtt/helm-release.yaml
+++ b/cluster/apps/home/zigbee2mqtt/helm-release.yaml
@@ -65,7 +65,7 @@ spec:
         requiredDuringSchedulingIgnoredDuringExecution:
           nodeSelectorTerms:
             - matchExpressions:
-                - key: zigbee-controller
+                - key: custom-zigbee
                   operator: In
                   values:
                     - "true"
