fix labels added by nfd

--- a/cluster/apps/home/zwavejs2mqtt/helm-release.yaml
+++ b/cluster/apps/home/zwavejs2mqtt/helm-release.yaml
@@ -63,7 +63,7 @@ spec:
         requiredDuringSchedulingIgnoredDuringExecution:
           nodeSelectorTerms:
             - matchExpressions:
-                - key: custom-zwave
+                - key: feature.node.kubernetes.io/custom-zwave
                   operator: In
                   values:
                     - "true"
