--- a/cluster/apps/home/zigbee2mqtt/helm-release.yaml
+++ b/cluster/apps/home/zigbee2mqtt/helm-release.yaml
@@ -65,7 +65,7 @@ spec:
         requiredDuringSchedulingIgnoredDuringExecution:
           nodeSelectorTerms:
             - matchExpressions:
-                - key: custom-zigbee
+                - key: feature.node.kubernetes.io/custom-zigbee
                   operator: In
                   values:
                     - "true"
