add grafana authentik support

--- a/cluster/apps/monitoring/grafana/helm-release.yaml
+++ b/cluster/apps/monitoring/grafana/helm-release.yaml
@@ -55,7 +55,7 @@ spec:
         cert-manager.io/cluster-issuer: letsencrypt-production
         kubernetes.io/ingress.class: traefik
         traefik.ingress.kubernetes.io/router.entrypoints: websecure
-        traefik.ingress.kubernetes.io/router.middlewares: networking-internal-auth@kubernetescrd
+        traefik.ingress.kubernetes.io/router.middlewares: networking-no-auth@kubernetescrd
       hosts:
         - &host "grafana.${CLUSTER_DOMAIN}"
       tls:
