use specific error-page template

--- a/cluster/apps/networking/error-pages/helm-release.yaml
+++ b/cluster/apps/networking/error-pages/helm-release.yaml
@@ -26,7 +26,7 @@ spec:
       replicas: 1
     nameOverride: error-pages
     env:
-      TEMPLATE_NAME: i-said-random
+      TEMPLATE_NAME: lost-in-space
     service:
       main:
         ports:
