experiment with authentik

--- a/cluster/apps/media/nzbget/helm-release.yaml
+++ b/cluster/apps/media/nzbget/helm-release.yaml
@@ -44,11 +44,9 @@ spec:
             paths:
               - path: /outpost.goauthentik.io/
                 pathType: Prefix
-                backend:
-                  service:
-                    name: ak-outpost-authentik-embedded-outpost
-                    port:
-                      number: 9000
+                service:
+                  name: ak-outpost-authentik-embedded-outpost
+                  port: 9000
         tls:
           - secretName: "{{ .Release.Name }}-tls"
             hosts:
